--- a/EVENT_MS/EVENT_MS.csproj
+++ b/EVENT_MS/EVENT_MS.csproj
@@ -69,7 +69,7 @@
   <ItemGroup>
     <Content Include=".gitignore" />
     <Content Include="about.html" />
-    <Content Include="add_event.aspx" />
+    <Content Include="manage_events.aspx" />
     <Content Include="adminD.aspx" />
     <Content Include="adminDashboard.aspx" />
     <Content Include="AdminLogin.aspx" />
@@ -112,7 +112,6 @@
     <Content Include="login.aspx" />
     <Content Include="login.html" />
     <Content Include="login1.aspx" />
-    <Content Include="Manage_Events.aspx" />
     <Content Include="pricing.html" />
     <Content Include="register.html" />
     <Content Include="schedule.html" />
@@ -124,12 +123,12 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="add_event.aspx.cs">
-      <DependentUpon>add_event.aspx</DependentUpon>
+    <Compile Include="manage_events.aspx.cs">
+      <DependentUpon>manage_events.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="add_event.aspx.designer.cs">
-      <DependentUpon>add_event.aspx</DependentUpon>
+    <Compile Include="manage_events.aspx.designer.cs">
+      <DependentUpon>manage_events.aspx</DependentUpon>
     </Compile>
     <Compile Include="adminD.aspx.cs">
       <DependentUpon>adminD.aspx</DependentUpon>
@@ -193,13 +192,6 @@
     </Compile>
     <Compile Include="login1.aspx.designer.cs">
       <DependentUpon>login1.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Manage_Events.aspx.cs">
-      <DependentUpon>Manage_Events.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Manage_Events.aspx.designer.cs">
-      <DependentUpon>Manage_Events.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sign up.aspx.cs">
